--- a/static/css/for_home.css
+++ b/static/css/for_home.css
@@ -1,392 +1,283 @@
-@import url('https://fonts.googleapis.com/css2?family=Kenia&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Lilita One&display=swap');
-/*for vedio*/
-body, header {
+* {
+  box-sizing: border-box;
   margin: 0;
   padding: 0;
-
 }
 
-
-/* Style the header with a background color and text color */
-header.masthead
-{background:no-repeat center center;background-color:#e0e6ea
-    ;height: 30rem;width:100%;backface-visibility: visible;background-size:cover;}
-
-   
-  header.masthead .page-heading
-  {padding:25px 0 150px;color:#3c4757}
-  header.masthead .page-heading .subheading,header.masthead .site-heading .subheading
-  {
-      font-size:clamp(20px,4vw,35px);color: #fbf8f8;font-weight:620;line-height:1.1;display:block;
-      margin:30px 0 0;font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
-  }
-
-
-
-header.masthead .site-heading
-{text-align:center;padding-top: 150px;}
-
-/* Style the video container to make it full-width and responsive */
-.video-container {
-  position: relative;
- width:100%;
-  height: clamp(270px,25vw,500px);
-
+body,
+header {
+  margin: 0;
+  padding: 0;
 }
 
-/* Style the video to cover the entire container */
-video {
-
+header.masthead {
+  background: no-repeat center center;
+  background-color: #e0e6ea;
+  height: 30rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
   width: 100%;
-  height: 100%;
-  object-fit: cover;
- 
-
+  backface-visibility: visible;
+  background-size: cover;
 }
+
+
 /* not found page*/
-.notfound{
-  font-size: clamp(48px,6vw,75px);
-  font-family: Impact;
+.notfound {
+  font-size: clamp(48px, 6vw, 75px);
+  font-family: "orbitron";
   margin-bottom: 30px;
   margin-top: 40px;
   margin-top: 4%;
- 
   color: black;
 }
-.nfs{
-  font-size: clamp(18px,6vw,40px);
-  font-family: Impact;
+
+.nfs {
+  font-size: clamp(18px, 6vw, 40px);
+  font-family: "teko";
   margin-bottom: 30px;
   margin-top: 40px;
- 
   color: black;
 }
 
+h1 {
+  font-size: clamp(48px, 6vw, 65px);
+  font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
+  margin-bottom: 30px;
+  margin-top: 40px;
+  color: rgb(255, 255, 255);
+}
 
+h2 {
+  font-size: clamp(48px, 6vw, 65px);
+  font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
+  margin-bottom: 10px;
+  margin-top: 10px;
+  text-align: center;
+  color: rgb(0, 0, 0);
+}
 
-
+.subheading {
+  font-size: clamp(30px, 6vw, 45px);
+  color: #f3bfb3;
+}
 
 /* for search results*/
-.searched{
-  color:brown;
-  font-size: clamp(25px,4vw,60px);
+.searched {
+  color: brown;
+  font-size: clamp(25px, 4vw, 60px);
   text-decoration: none;
 }
-h3{
-  margin-top: clamp(20px,5vw,24px);
-  font-size: clamp(30px,4vw,65px);
+
+h3 {
+  margin-top: clamp(20px, 5vw, 24px);
+  font-size: clamp(30px, 4vw, 65px);
   font-weight: 600;
-  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-  margin-left: 2%;
-
+  font-family: 'orbitron';
+  margin-left: 3%;
 }
-
-
-
-    h1{
-      font-size: clamp(48px,6vw,65px);
-      font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-      margin-bottom: 30px;
-      margin-top: 40px;
-     
-      color: honeydew;
-    }
-    h2{
-      font-size: clamp(48px,6vw,65px);
-      font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-      margin-bottom: 10px;
-      margin-top: 10px;
-     text-align: center;
-      color: rgb(0, 0, 0);
-    }
-
-     .subheading{
-      font-size:clamp(30px,6vw,45px);
-    color: #F3BFB3;
-  }
-
-
-
-  
-     
-   
-
 
 /* for post */
 
-.container-1{
-   
+#testimonial-grid-container {
+  padding: 0% 3%;
 
-    width: 100% ;
-   
-   border-radius: 3px;
-
-  background:#ffffff;
-
-overflow-wrap: break-word;
-height: max-content;
-
-
-  } 
- 
-.csub-1{
-  
-  height: 100%;
-  width:100%
- 
+  margin-bottom: 45px;
 }
-  
 
-#username-1 a{
+#testimonial-1,
+#testimonial-2 {
+  position: relative;
+  z-index: 0;
+}
+
+#username-1,
+#username-1 a {
   margin-top: 1%;
-font-family:  Saria;
-font-weight: 800;
-  font-size: clamp(15px,1vw,32px);
-
+  font-family: 'Pixelify Sans', sans-serif;
+  font-weight: 800;
+  font-size: clamp(20px, 3vw, 38px);
   margin-bottom: 1px;
-  color:rgb(0, 0, 0);
- 
-  
+  color: rgb(0, 0, 0);
   margin-right: 1%;
   text-decoration: none;
- 
-
 }
 
-#username-1{
+#username-1 img {
+  margin-left: 1%;
+  padding-bottom: 3px;
+}
+
+#username-1 {
+  font-size: clamp(12px, 2vw, 24px);
+  margin-bottom: 0;
+  color: #358ca6;
+  font-family: 'Rubik', sans-serif;
+}
+
+.post-title-1 {
+  font-size: clamp(20px, 3vw, 40px);
+  text-decoration: #f2f7fc underline;
+  margin-left: 4%;
+  margin-bottom: 4px;
+  color: #c9374c;
+  padding-top: 0;
+  font-family: "orbitron";
+}
+
+.content-1 {
+  line-height: 1.1;
+  word-break: normal;
+  font-size: clamp(15px, 2vw, 26px);
   margin-top: 1%;
- 
-  font-family:  Saria;
-  font-weight: 800;
-    font-size: clamp(13px,1vw,24px);
-  
-    margin-bottom: 1px;
-    color:salmon;
-   
-    margin-left: 1%;
-    text-decoration: none;
+  margin-left: 8%;
+  font-weight: 500;
+  margin-bottom: 1%;
+  margin-right: 3%;
+  color: rgb(0, 0, 0);
+  font-family: 'Rubik', sans-serif;
 }
-   
-   .post-title-1{
-    font-size: clamp(20px,4vw,30px);
-    text-decoration:#ffffff underline;
-    margin-left: 4%;
-    margin-bottom: 4px;
-    color:#028dff;
-   padding-top: 1%;
-   font-family: Kenia;
- 
-   }
- 
-   .post-meta-1{
-    margin-left: 5%;
-    font-size: 11px;
-    color:black;
-    font-weight: 700;
-  
-   }
 
+/*chat icon*/
+.chat-icon {
+  display: flex;
+  align-items: center;
+  margin-left: 92%;
+}
 
- 
-   /*username*/
-   span{
-    text-decoration: whitesmoke underline;
-    font-size: clamp(14px,3vw,15px);
-    margin-left: 3px;
- 
-    color:salmon;
+a #chat {
+  font-size: clamp(22px, 3vw, 40px);
+  color: #000;
 }
 
 
-      
+.container-waterflow {
+  height: 100%;
+  width: 11%;
+  position: fixed;
+  z-index: 5;
+  background: #faf6f6;
+  display: none;
 
- .content-1{
-        line-height: 1.1;
-       font-size: clamp(15px,2vw,22px);
-       margin-top: 10px;
-       margin-left:8% ;
-     font-weight: 500;
-     margin-bottom: 10px;
-    margin-right: 3%;
-     color:rgb(0, 0, 0);
+}
 
-     font-family: Saira;
-        }
-
-  
-            
-           
-             .container-waterflow{
-                height: 100%;
-                width:11%;
-               position: fixed;
-           z-index:5;
-              background:brown;
-              display:none;
-            }
-           
-               
-
-              
-          
-
- /* for individual posts*/
-.container-content{
+/* for individual posts*/
+.container-content {
   margin-left: 0%;
- 
-overflow-wrap: break-word;
+  overflow-wrap: break-word;
   margin-top: 50px;
   margin-bottom: 70px;
   border-radius: 8px;
 }
-.post-content{
- 
+
+.post-content {
   margin-top: 15px;
   margin-bottom: 20px;
   margin-left: 15px;
   margin-right: 8px;
-  font-size: clamp(16px,2vw,35px);
+  font-size: clamp(16px, 2vw, 35px);
   opacity: 10px;
-
-  font-family: system-ui, -apple-system;
-font-weight: 600;
-letter-spacing: 1px;
-
+  font-family: 'quicksand';
+  font-weight: 600;
+  letter-spacing: 1px;
+  word-break: break-all;
   line-height: 1.4;
 }
-.user-discuss{
-  margin-left: 40%;
-  font-size: clamp(10px,2vw,25px);
 
+.user-discuss {
+  margin-left: 40%;
+  font-size: clamp(10px, 2vw, 25px);
   text-align: end;
+  font-weight: 800;
   margin-top: 3%;
   margin-bottom: 10rem;
-  color:#000000;
-  font-family:Tahoma, sans-serif;
+  color: #000000;
+  font-family: 'rubik';
 }
 
-@media (min-width:480px){
-
-  .post-meta-1{
-    font-size: 11px;
-  }
-  .post-meta-2{
-    font-size: 11px;
+@media (min-width: 876px) {
+  #username-1 img {
+    width: 50px;
+    height: 50px;
   }
 
-}
-@media (min-width:720px){
-
-  .post-meta-1{
-    font-size: 13px;
-  }
- 
-  .post-meta-2{
-    font-size: 13px;
+  h3 {
+    margin-left: 10%;
   }
 
-}
-@media(min-width:870px){
-
- h3{
-  margin-left: 8%;
-}
-
- .container-waterflow{
-  width:6%;
-  display: inline;
- }
- .container-1{
-  margin-left: 8%;
-  width: 92%;
-}
-
-
-.container-content{
-  margin-left:5%;
-  margin-right: 5%;
-}
-
-.searched{
-  display: inline;
-}
-
-}
-@media(min-width:1200px){
-.container-waterflow{
-  display: inline;
-  width: 7%;
-}
-#username-1 img{
-  width:38px;
-  height: 38px;
-}
-
-  .post-meta-1{
-    font-size: 20px;
+  .container-waterflow {
+    width: 6%;
+    display: inline;
   }
 
-  .post-meta-2{
-    font-size: 20px;
-  }
-  #username-1{
-    font-size: 18px;
-  }
-  #username-1 a{
-    font-size: 22px;
+  .container-content {
+    margin-left: 5%;
+    margin-right: 5%;
   }
 
+  .searched {
+    display: inline;
+  }
 
+  #testimonial-grid-container {
+    width: 98%;
+    padding-right: 0%;
+    padding-left: 6%;
+    margin: 0 auto;
+  }
 }
 
-@media(min-width:1500px){
-  span{
+@media (min-width: 1200px) {
+  .container-waterflow {
+    display: inline;
+    width: 7%;
+  }
+}
+
+@media (min-width: 1800px) {
+  span {
     display: none;
   }
 
-  #username-1 img{
-    width:42px;
-    height: 42px;
+  #username-1 img {
+    width: 55px;
+    height: 55px;
   }
-  .post-title-1{
-    font-size: 50px;
+
+  #uid-1 a {
+    font-size: clamp(18px, 4vw, 30px);
+    font-weight: 600;
+    text-decoration: none;
+    color: rgb(0, 0, 0);
+    text-align: center;
+    margin-left: 30%;
   }
- 
-  .post-meta-1{
+
+  #top {
+    display: block;
+  }
+
+  #testimonial-1,
+  #testimonial-2 {
+    width: 53%;
+    display: inline-flex;
+    flex-direction: column;
+    height: max-content;
+    margin-top: 1%;
+    border: 2px solid black;
+  }
+
+  #testimonial-2 {
+    width: 45%;
+  }
+
+  .content-1 {
     font-size: 29px;
   }
 
-  #username-1{
-    font-size: 28px;
+  #testimonial-grid-container {
+    padding-left: 7%;
   }
-  #username-1 a{
-    font-size: 36px;
-  }
-
-  span{
-    font-size: 30px;
-  }
-  .content-1{
-    font-size: 35px;
-    line-height: 1.1;
-    font-weight: 600;
-  }
- 
- 
-   
-   
-        
-         #uid-1 a {
-          font-size: clamp(18px,4vw,30px);
-          font-weight: 600;
-          text-decoration: none;
-          color:rgb(0, 0, 0);
-          text-align: center;
-          margin-left: 30%;
-         }
-    
-    
-
 }
-
