--- a/templates/chat.html
+++ b/templates/chat.html
@@ -47,11 +47,9 @@
       #title_container {
         width: 100%;
         height: 225px;
-
         display: flex;
         justify-content: center;
         align-items: center;
-
         background-color: #d64045; /*#467599;*/
         border-bottom: 5px solid #fff;
         box-shadow: 0 0 30px -18px #d64045;
@@ -59,19 +57,16 @@
       #title_inner_container {
         width: 100%;
         height: 100%;
-
         display: flex;
         justify-content: center;
         align-items: center;
-
-        /* background-color: #083D77; */
         border-radius: 200px;
       }
       #title {
-        display: inline-block;
-        color: #fff; /*EBEBD3, C5283D*/
-        font-size: 55px;
-        letter-spacing: 2px;
+        display: flex;
+        justify-content: center;
+        align-self: center;
+        font-size: clamp(55px, 6vw, 70px);
         user-select: none;
       }
 
@@ -89,6 +84,7 @@
       #join_inner_container {
         width: 50%;
         height: 100%;
+        zoom: 200%;
       }
       #join_input_container {
         width: 100%;
@@ -264,7 +260,7 @@
       }
       #title.chat_title {
         transition: 0.8s;
-        font-size: 47px;
+        font-size: clamp(55px, 6vw, 70px);
       }
       .loader_container {
         width: 100%;
@@ -345,6 +341,15 @@
         #title.chat_title {
           font-size: 30px;
         }
+        #title {
+          font-size: 40px;
+        }
+      }
+      @media (max-width: 1200px) {
+        #join_inner_container {
+          zoom: 100%;
+          width: 80%;
+        }
       }
     </style>
     <script>
@@ -419,7 +424,7 @@
             var join_input = document.createElement("input");
             join_input.setAttribute("id", "join_input");
             join_input.setAttribute("maxlength", 15);
-            join_input.placeholder = "No.... It's Patrick Star";
+            join_input.placeholder = "No.... It's You";
             // Every time we type into the join_input
             join_input.onkeyup = function () {
               // If the input we have is longer that 0 letters
